# heterogeneity-aware-lowering-and-optimization

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_mnist  main_for_final24.cc  run_mnist
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: build.yaml
.github/workflows/: clang-format-lint.yaml  doc_gen.yaml  ipu_sim.yaml  main.yaml  mlc_config.json  publish_image.yaml
ODLA/: CMakeLists.txt  Doxyfile  header.tex
armory/: CMakeLists.txt
armory/analyzer/: CMakeLists.txt  driver.cc
armory/diagnostic/: CMakeLists.txt  driver.cc
armory/profiler/: CMakeLists.txt
cmake/modules/: ccache.cmake  clang_tidy.cmake  create_halo_library.cmake  doxygen.cmake  flatbuf.cmake  glog.cmake  halo_install.cmake  model_zoo.cmake  protobuf.cmake  tablegen.cmake  zbuild_llvm.cmake
docs/: CMakeLists.txt  CONTRIBUTING.md  HaloIR.md  README_CN.md  doxyfile.in  halo_cl_options.md  how_to_build.md  intel_dnnl_gpu.md  intel_gpu.md  mainpage.dox  mnist_sample.md  model_zoo.md  test_intel_gpu.md  using_inside_python.md  yolo_example.md
driver/: CMakeLists.txt  driver.cc
include/: CMakeLists.txt
include/halo/: CMakeLists.txt  halo.h  version.h
include/halo/api/: halo_data.h
include/halo/lib/: CMakeLists.txt
include/halo/lib/compiler/: compilation.h
include/halo/lib/framework/: common.h  data_layout.h  global_context.h  type.h
include/halo/lib/ir/: CMakeLists.txt  arg_types.td  argument.h  attribute.h  attribute_types.td  basic_block.h  caffe_convert.td  common_cast_instructions.td  common_instructions.td  common_reduction_instructions.td  constant.h  controlflow_instructions.td  convert.td  creator_instructions.td  customize_instructions.td  extension_instructions.h  function.h  fusion.td  instruction.h  instruction_base.td  instruction_info.td  instructions.td  ir_builder.h  loss_instructions.td  math_binary_instructions.td  math_instructions.td  math_unary_instructions.td  module.h  nn_activation_instructions.td  nn_cnn_instructions.td  nn_instructions.td  nn_rnn_instructions.td  object_detection_instructions.td  onnx_convert.td  quantization_instructions.td  tf_convert.td  tflite_convert.td  value_type.td  values.h
include/halo/lib/mm/: memory_analyzer.h
include/halo/lib/parser/: parser.h
include/halo/lib/pass/: pass.h  pass_manager.h  verifier.h
include/halo/lib/quantizer/: weights_quantizer.h
include/halo/lib/serializer/: serializer.h
include/halo/lib/transforms/: analyzer.h  caffeextension_legalizer.h  constant_decombine.h  convert_tf_cfg.h  dce.h  device_placement.h  fusion.h  input_legalizer.h  input_rewriter.h  inst_simplify.h  onnxextension_legalizer.h  output_rewriter.h  reorder_channel.h  sharding.h  splitting.h  tfextension_legalizer.h  tfliteextension_legalizer.h  transforms_util.h  type_legalizer.h  typecast.h
include/halo/utils/: cl_options.h  passes_helper.h  path.h
lib/: CMakeLists.txt
lib/compiler/: CMakeLists.txt  compilation.cc
lib/framework/: CMakeLists.txt  global_context.cc  type.cc
lib/interface/: .clang-tidy  CMakeLists.txt  interface.cc
lib/ir/: CMakeLists.txt  argument.cc  attribute.cc  basic_block.cc  constant.cc  extension_instructions.cc  function.cc  instruction.cc  ir_builder.cc  module.cc  values.cc
lib/mm/: CMakeLists.txt  memory_analyzer.cc
lib/parser/: CMakeLists.txt  parser.cc
lib/parser/caffe/: CMakeLists.txt  caffe_parser.cc  caffe_parser.h
lib/parser/onnx/: CMakeLists.txt  onnx_parser.cc  onnx_parser.h
lib/parser/tensorflow/: CMakeLists.txt  tf_parser.cc  tf_parser.h
lib/parser/tflite/: CMakeLists.txt  tflite_parser.cc  tflite_parser.h
lib/pass/: CMakeLists.txt  pass_manager.cc  verifier.cc
lib/quantizer/: CMakeLists.txt  weights_quantizer.cc
lib/runtime/: CMakeLists.txt
lib/serializer/: CMakeLists.txt  serializer.cc
lib/transforms/: CMakeLists.txt  analyzer.cc  caffeextension_legalizer.cc  constant_decombine.cc  convert_tf_cfg.cc  dce.cc  device_placement.cc  dynamic_type_legalizer.cc  fusion.cc  input_legalizer.cc  input_rewriter.cc  inst_simplify.cc  onnxextension_legalizer.cc  output_rewriter.cc  reorder_channel.cc  sharding.cc  splitting.cc  tfextension_legalizer.cc  tfliteextension_legalizer.cc  transforms_util.cc  type_legalizer.cc  typecast.cc
lib/utils/: CMakeLists.txt  path.cc  version.cc
models/: CMakeLists.txt  Instruction.md  env.src  lit.cfg.py  lit.site.cfg.in  run.all.sh
models/benchmarks/: CMakeLists.txt  model_base.td  models.td  resnet50v2.td
models/docker/: Dockerfile  build_image.sh
models/vision/: common.py  get_images.sh  invoke_halo.py  onnx2tensorrt.py  onnx_add_batch.py  tensorrt_baseline_run_all.sh
odla_docs/html/: annotated.html  classes.html  dir_000000_000001.html  dir_76c3745fcc54ef36a937ba5a5f6cc8e3.html  dir_76c3745fcc54ef36a937ba5a5f6cc8e3_dep.map  dir_76c3745fcc54ef36a937ba5a5f6cc8e3_dep.md5  dir_ce8165fecb7d59b6e4e070821287c673.html  dir_ce8165fecb7d59b6e4e070821287c673_dep.map  dir_ce8165fecb7d59b6e4e070821287c673_dep.md5  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  odla_8h.html  odla_8h_source.html  odla__common_8h.html  odla__common_8h_source.html  odla__compute_8h.html  odla__compute_8h_source.html  odla__device_8h.html  odla__device_8h_source.html  odla__log_8h.html  odla__log_8h_source.html  odla__memory_8h.html  (+41 more)
odla_spec/: odla_spec.html
python/: CMakeLists.txt  setup.py.in
runtime/: CMakeLists.txt
runtime/generic/: CMakeLists.txt
runtime/generic/common/: cast.cc  gather.cc  onehot.cc  pad.cc  reduce.cc  slice.cc
runtime/generic/math/: add.cc  broadcast.h  div.cc  erf.cc  floor.cc  matmul.cc  mul.cc  sqrt.cc  sub.cc  transpose.cc
runtime/generic/nn/: batchnorm.cc  conv.cc  pooling.cc  relu.cc  softmax.cc  utils.h
runtime/riscv/: CMakeLists.txt
runtime/riscv/nn/: conv.cc
runtime/templates/: CMakeLists.txt  sample.cc  save_trt_engine.cc  simple.c
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.in
utils/: CMakeLists.txt  halo_pgq.py  pre_commit_check.sh
(+4222 files in other folders)
